@@ -3,6 +3,7 @@ Version 0.17.1 (2022-01-09)
 - Move Exceptions to own module
 - Add binary_sensor platform for SVs
 - Add config check
+- Add hub_entities_by_platform
 
 Version 0.17.1 (2022-01-09)
 - Fix naming for multi channel custom entities
